# training

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Flashcards.tex  LC001TwoSum.java  LC003LongestSubstringWithoutRepeatingCharacters.java  LC006ZigZagConversion.java  LC007ReverseInteger.java  LC008StringToIntegerAToI.java  LC009PalindromeNumber.java  LC013RomanToInteger.java  LC014LongestCommonPrefix.java  LC019RemoveNthNodeFromEndOfList.java  LC020ValidParentheses.java  LC021MergeTwoSortedLists.java  LC026RemoveDuplicatesFromSortedArray.java  LC027RemoveElement.java  LC029DivideTwoIntegers.java  LC034SearchForARange.java  LC038CountAndSay.java  LC042TrappingRainWater.java  LC045JumpGameII.java  LC049Anagrams.java  LC049GroupAnagrams.java  LC054SpiralMatrix.java  LC055JumpGame.java  LC058LengthOfLastWord.java  LC060PermutationSequence.java  LC062UniquePaths.java  LC066PlusOne.java  LC069SqrtX.java  LC070ClimbingStairs.java  LC078Subsets.java  LC079WordSearch.java  LC083RemoveDuplicatesFromSortedList.java  LC086PartitionList.java  LC088MergeSortedArray.java  LC089GrayCode.java  LC093RestoreIPAddresses.java  (+64 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
algorithm-design/: Program.cs  algorithm-design.tex
algorithms/: Cargo.toml  algorithms.csproj  algorithms.html  algorithms.md  algorithms.tex  build.rs  checkstyle-suppressions.xml  go.mod  pom.xml  spotbugs-suppressions.xml
algorithms/code/other/banking_api/: .dockerignore  .gitignore  Dockerfile  README.md  populate.sh  pyproject.toml  run.sh
algorithms/code/other/banking_api/automation/: 1.build.sh  2.lint.sh  2.linters.sh  3.test.sh
algorithms/code/other/banking_api/src/banking/: database.py  main.py  utilities.py
algorithms/code/other/banking_api/src/banking/api/: accounts.py  customers.py  transfers.py
algorithms/code/other/banking_api/src/banking/models/: accounts.py  customers.py  transfers.py
algorithms/code/other/banking_api/src/banking/schemas/: accounts.py  customers.py  transfers.py
algorithms/code/other/banking_api/tests/: test_accounts.py  test_customers.py  test_redirect.py  test_transfers.py
algorithms/code/other/data_storage_api/: Cargo.toml  README.md  coding_test.go  data_storage_api.rs  testapp.go
flashcards/: flashcards_template.tex
hackerrank/: __init__.py  helper.py  py_hello_world.py  suite.py  test_class_1_dealing_with_complex_numbers.py  test_class_2_find_the_torsional_angle.py  test_clique.py  test_collections_counter.py  test_defaultdict_tutorial.py  test_exceptions.py  test_map_and_lambda_expression.py  test_no_idea.py  test_pangrams.1.in  test_py_collections_namedtuple.py  test_py_hello_world.py  test_py_if_else.py  test_python_arithmetic_operators.py  test_python_division.py  test_python_loops.py  (+7 more)
(+2119 files in other folders)
