[package]
name = "training"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tracing-subscriber = "0.3.18"

[lib]
name = "training"
path = "algorithms/code/lib.rs"
doctest = false
